2003-08-30  Keisuke Nishida  <kxn30@yahoo.co.jp>

	* common.h (cob_module): Replace `flag_binary_print_full' by
	`flag_binary_truncate'.  Related functions updated.

2003-08-29  Keisuke Nishida  <kxn30@yahoo.co.jp>

	* termio.h (COB_SYSIN, COB_SYSOUT, COB_SYSERR): Removed.
	* termio.h, termio.c (cob_display_error): New function.
	(cob_newline_error): New function.

2003-08-27  Keisuke Nishida  <kxn30@yahoo.co.jp>

	* fileio.c: Compile indexed and sort i/o only when either of
	HAVE_DBOPEN or WITH_DB is defined.

2003-08-26  Keisuke Nishida  <kxn30@yahoo.co.jp>

	* common.h (cob_module): New member `flag_filename_mapping'.
	* fileio.c (cob_open): filename mapping.

2003-08-26  Keisuke Nishida  <kxn30@yahoo.co.jp>

	* common.h, common.c (cob_a2e, cob_e2a): New variables.

2003-08-25  Keisuke Nishida  <kxn30@yahoo.co.jp>

	* fileio.c (sort_read): Bug fix of first read.

2003-08-25  Keisuke Nishida  <kxn30@yahoo.co.jp>

	* fileio.h, fileio.c (cob_sort_init): 3rd argument `sequence'.
	(cob_sort_finish): New function.

2003-08-22  Keisuke Nishida  <kxn30@yahoo.co.jp>

	* Don't use run-time config file.
	* common.h, common.c (cob_config_lookup, cob_config_compare): Removed.
	* call.c (cob_init_call): Handle env "COB_DYNAMIC_RELOADING".

2003-08-21  Keisuke Nishida  <kxn30@yahoo.co.jp>

	* common.h (cob_module): New member `flag_binary_print_full'.
	* termio.c (cob_display): Binary full print.

2003-08-21  Keisuke Nishida  <kxn30@yahoo.co.jp>

	* common.h (cob_display_sign): New enum.
	(cob_module): New entry `display_sign'.
	* common.c (cob_real_get_sign, cob_real_put_sign): Check display_sign.

2003-08-19  Keisuke Nishida  <knishida@netlab.jp>

	* termio.c (cob_accept_command_line): Omit the program name (argv[0]).

2003-08-17  Keisuke Nishida  <knishida@netlab.jp>

	* termio.h, termio.c (cob_display_environment): New function.
	(cob_accept_environment): Remove the second argument.

2003-08-12  Keisuke Nishida  <knishida@netlab.jp>

	* byteswap.h: New file.